tests/baselines/reference/propertyNamedConstructor.errors.txt
tests/cases/conformance/classes/propertyMemberDeclarations/propertyNamedConstructor.ts(2,3): error TS18006: Classes may not have a field named 'constructor'.


==== tests/cases/conformance/classes/propertyMemberDeclarations/propertyNamedConstructor.ts (1 errors) ====
    class X1 {
      "constructor" = 3; // Error
      ~~~~~~~~~~~~~
!!! error TS18006: Classes may not have a field named 'constructor'.
    }
    
    class X2 {
      ["constructor"] = 3;
    }
    